--- a/static/css/details.css
+++ b/static/css/details.css
@@ -83,13 +83,92 @@
     height: 100%;
     object-fit: cover; /* crop center */
   }
-
+  
   /* Carousel */
-.swiper {
-  width: 100%;
-  min-height: 300px;
+.carousel-wrapper { 
+  position: relative; 
+  overflow: visible; /* important! */
 }
 
-.swiper-slide {
-  height: auto;
+.owl-carousel {
+  overflow: visible !important;
+}
+
+.show-card {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.show-img-wrapper {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.show-img-wrapper img {
+  height: 100%;
+  width: auto;
+  object-fit: cover;
+}
+
+.owl-nav i {
+  font-size: 2rem;
+}
+
+.owl-nav {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  z-index: 3;
+  display: flex;
+  justify-content: space-between;
+  pointer-events: none;
+}
+
+.owl-nav button {
+  pointer-events: auto;
+}
+
+
+
+.owl-nav-right i {
+  left: -25%; /* Adjusted for better visibility */
+}
+
+/* Style the dots container */
+.owl-dots {
+  text-align: center;
+  margin-top: 20px;
+}
+
+/* Each dot */
+.owl-dot {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  margin: 5px;
+  transform: rotate(45deg); /* Makes it a diamond */
+  background-color: blue; /* Inactive color */
+  border: 2px solid #9C0645;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+/* Active dot */
+.owl-dot.active {
+  background-color: #9C0645;
+}
+
+/* Optional: hover effect */
+.owl-dot:hover {
+  background-color: #9C0645;
+  cursor: pointer;
+}
+
+.show-carousel-section {
+  background: rgba(237, 169, 204, 0.5);
 }
